removed unnecessary code from footer and style

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
 
     <footer class="bg-dark text-center" id="footer">
-        <div class="text-center p-1" style="background-color: rgb(43, 42, 42);">
+        <div class="text-center p-1">
             <h6 class="text-light">Kontakt | Telefon: lorem ipsum lub lorem ipsum | E-Mail: lorem.ipsum@gmail.com
             </h6>
         </div>
